--- a/web/themes/custom/local/scss/style.scss
+++ b/web/themes/custom/local/scss/style.scss
@@ -89,7 +89,7 @@ h3 {
 }
 
 .site-footer {
-    background: $accent-secondary !important;
+    background: $accent-shade !important;
     &,
     a {
         color: $white;
