--- a/web/themes/custom/local/scss/variables.scss
+++ b/web/themes/custom/local/scss/variables.scss
@@ -25,6 +25,7 @@ $gray: #4a4a4a;
 $dark-gray: #333;
 $light-gray: #666;
 $lighter-gray: #888;
+$lighest-gray: #efefef;
 $theme-colors: ( primary: $accent-shade, secondary: $primary-shade, success: $green, info: $cyan, warning: $yellow, danger: $red, light: $gray-100, dark: $gray-800);
 $brand-primary: $accent-shade;
 //$brand-success: $green;
