--- a/web/themes/custom/local/scss/components/page.scss
+++ b/web/themes/custom/local/scss/components/page.scss
@@ -245,11 +245,9 @@
 }
 
 #main .hero {
-    margin-top: -31px;
-    margin-bottom: 30px;
-
     .node__content {
         margin: 0;
+        padding: 0;
         position: relative;
     }
     .field--type-image {
@@ -261,6 +259,7 @@
     }
     .field--name-field-hero-text {
         background-color: rgba(33, 33, 33, 0.8);
+        border-radius: 5px;
         color: $white;
         left: $spacer;
         padding: $spacer;
@@ -270,6 +269,7 @@
             color: $white;
             font-size: 1.5rem;
             font-weight: bold;
+            margin-bottom: 50px;
         }
 
         .btn-primary {
