--- a/web/themes/custom/local/scss/variables.scss
+++ b/web/themes/custom/local/scss/variables.scss
@@ -6,7 +6,7 @@ $pakmail-gray: rgb(97, 98, 101);
 
 // colors
 $primary-shade: $pakmail-red;
-$primary-light: lighten($primary-shade, 37%);
+$primary-light: lighten($primary-shade, 60%);
 $primary-dark: darken($primary-shade, 12%);
 $accent-shade: #291d1f;
 $accent-light: lighten($accent-shade, 37%);
@@ -24,7 +24,7 @@ $gray-800: #343a40 !default;
 $gray: #4a4a4a;
 $dark-gray: #333;
 $light-gray: #666;
-$lighter-gray: #888;
+$lighter-gray: #ddd;
 $lighest-gray: #efefef;
 $theme-colors: ( primary: $accent-shade, secondary: $primary-shade, success: $green, info: $cyan, warning: $yellow, danger: $red, light: $gray-100, dark: $gray-800);
 $brand-primary: $accent-shade;
