--- a/web/themes/custom/local/scss/components/page.scss
+++ b/web/themes/custom/local/scss/components/page.scss
@@ -35,7 +35,12 @@
 .ribbon {
     margin-top: 30px;
     margin-bottom: 30px;
-    padding: 30px;
+    padding: 60px 30px;
+
+    h2 {
+        font-size: 1.5rem;
+        margin-bottom: 2rem;
+    }
 
     .btn-secondary {
         margin: 0 0 30px;
@@ -142,7 +147,7 @@
     background-color: $accent-light;
 }
 
-.block-simple-blockwhy-our-franchise-is-right {
+#block-atpakmailyoureinbusinessforyourselfbutnotbyyourself {
     margin-bottom: 0;
     padding-bottom: 0;
 }
@@ -183,7 +188,7 @@
         background-color: $white;
         
         h2 {
-            margin-bottom: 2rem;
+            margin-bottom: 3rem;
         }
     }
 
@@ -199,7 +204,7 @@
         }
 
         > .block {
-            padding: 30px 0;
+            padding: 60px 0;
             width: 100%;
             text-align: center;
         }
