--- a/web/themes/custom/local/css/style.css
+++ b/web/themes/custom/local/css/style.css
@@ -65,7 +65,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 body {
   margin: 0;
   font-family: "Open Sans", Verdana, Tahoma, "DejaVu Sans", sans-serif;
-  font-size: 1rem;
+  font-size: 0.875rem;
   font-weight: normal;
   line-height: 1.5;
   color: #212529;
@@ -314,25 +314,25 @@ h1, h2, h3, h4, h5, h6,
   color: inherit; }
 
 h1, .h1 {
-  font-size: 2.5rem; }
+  font-size: 2.1875rem; }
 
 h2, .h2 {
-  font-size: 2rem; }
-
-h3, .h3 {
   font-size: 1.75rem; }
 
+h3, .h3 {
+  font-size: 1.53125rem; }
+
 h4, .h4 {
-  font-size: 1.5rem; }
+  font-size: 1.3125rem; }
 
 h5, .h5 {
-  font-size: 1.25rem; }
+  font-size: 1.09375rem; }
 
 h6, .h6 {
-  font-size: 1rem; }
+  font-size: 0.875rem; }
 
 .lead {
-  font-size: 1.25rem;
+  font-size: 1.09375rem;
   font-weight: 300; }
 
 .display-1 {
@@ -390,7 +390,7 @@ mark,
 
 .blockquote {
   margin-bottom: 1rem;
-  font-size: 1.25rem; }
+  font-size: 1.09375rem; }
 
 .blockquote-footer {
   display: block;
@@ -1260,7 +1260,7 @@ pre {
   display: block;
   width: 100%;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 0.875rem;
   line-height: 1.5;
   color: #495057;
   background-color: #fff;
@@ -1285,7 +1285,7 @@ pre {
     opacity: 1; }
 
 select.form-control:not([size]):not([multiple]) {
-  height: calc(2.25rem + 2px); }
+  height: calc(2.0625rem + 2px); }
 
 select.form-control:focus::-ms-value {
   color: #495057;
@@ -1620,7 +1620,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
   user-select: none;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 0.875rem;
   line-height: 1.5;
   border-radius: 0.25rem;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
@@ -2099,7 +2099,7 @@ tbody.collapse.show {
   min-width: 10rem;
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
-  font-size: 1rem;
+  font-size: 0.875rem;
   color: #212529;
   text-align: left;
   list-style: none;
@@ -2389,7 +2389,7 @@ tbody.collapse.show {
   align-items: center;
   padding: 0.375rem 0.75rem;
   margin-bottom: 0;
-  font-size: 1rem;
+  font-size: 0.875rem;
   font-weight: normal;
   line-height: 1.5;
   color: #495057;
@@ -2508,7 +2508,7 @@ tbody.collapse.show {
 .custom-select {
   display: inline-block;
   width: 100%;
-  height: calc(2.25rem + 2px);
+  height: calc(2.0625rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
   line-height: 1.5;
   color: #495057;
@@ -2551,14 +2551,14 @@ tbody.collapse.show {
   position: relative;
   display: inline-block;
   width: 100%;
-  height: calc(2.25rem + 2px);
+  height: calc(2.0625rem + 2px);
   margin-bottom: 0; }
 
 .custom-file-input {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: calc(2.25rem + 2px);
+  height: calc(2.0625rem + 2px);
   margin: 0;
   opacity: 0; }
   .custom-file-input:focus ~ .custom-file-control {
@@ -2575,7 +2575,7 @@ tbody.collapse.show {
   right: 0;
   left: 0;
   z-index: 1;
-  height: calc(2.25rem + 2px);
+  height: calc(2.0625rem + 2px);
   padding: 0.375rem 0.75rem;
   line-height: 1.5;
   color: #495057;
@@ -2589,7 +2589,7 @@ tbody.collapse.show {
     bottom: 0;
     z-index: 3;
     display: block;
-    height: calc(calc(2.25rem + 2px) - 1px * 2);
+    height: calc(calc(2.0625rem + 2px) - 1px * 2);
     padding: 0.375rem 0.75rem;
     line-height: 1.5;
     color: #495057;
@@ -2676,8 +2676,8 @@ tbody.collapse.show {
 
 .navbar-brand {
   display: inline-block;
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
+  padding-top: 0.21875rem;
+  padding-bottom: 0.21875rem;
   margin-right: 1rem;
   font-size: 1.25rem;
   line-height: inherit;
@@ -3332,7 +3332,7 @@ tbody.collapse.show {
   font-weight: bold; }
 
 .alert-dismissible {
-  padding-right: 4rem; }
+  padding-right: 3.8125rem; }
   .alert-dismissible .close {
     position: absolute;
     top: 0;
@@ -3422,7 +3422,7 @@ tbody.collapse.show {
   display: flex;
   height: 1rem;
   overflow: hidden;
-  font-size: 0.75rem;
+  font-size: 0.65625rem;
   background-color: #e9ecef;
   border-radius: 0.25rem; }
 
@@ -3594,7 +3594,7 @@ tbody.collapse.show {
 
 .close {
   float: right;
-  font-size: 1.5rem;
+  font-size: 1.3125rem;
   font-weight: bold;
   line-height: 1;
   color: #000;
@@ -3932,7 +3932,7 @@ button.close {
 .popover-header {
   padding: 0.5rem 0.75rem;
   margin-bottom: 0;
-  font-size: 1rem;
+  font-size: 0.875rem;
   color: inherit;
   background-color: #f7f7f7;
   border-bottom: 1px solid #ebebeb;
@@ -6159,7 +6159,7 @@ a.text-dark:hover, a.text-dark:focus {
 .comment__meta {
   padding: 0 30px 0 0;
   /* LTR */
-  font-size: 1rem; }
+  font-size: 0.875rem; }
 
 [dir="rtl"] .comment__meta {
   padding: 0 0 0 30px; }
@@ -6255,7 +6255,7 @@ a.text-dark:hover, a.text-dark:focus {
 .comment .links-inline span {
   padding: 0 0.5em 0 0;
   /* LTR */
-  font-size: 1rem; }
+  font-size: 0.875rem; }
 
 [dir="rtl"] .comment .links-inline span {
   padding: 0 0 0 0.5em; }
@@ -6526,7 +6526,7 @@ summary {
   padding-left: 1.5rem;
   /* LTR */
   display: inline-block;
-  min-height: 1rem;
+  min-height: 0.875rem;
   background-repeat: no-repeat;
   background-position: left center;
   /* LTR */ }
@@ -6781,8 +6781,8 @@ label[for="edit-i-agree-the-information-contained-is-true-accurate-and-complete-
   overflow: hidden;
   text-indent: -9999px;
   display: block;
-  width: 1rem;
-  height: 1rem; }
+  width: 0.875rem;
+  height: 0.875rem; }
 
 /**
  * @file
@@ -6858,7 +6858,7 @@ label[for="edit-i-agree-the-information-contained-is-true-accurate-and-complete-
  * Visual styles for Bootstrap Barrio's node component.
  */
 .node__content {
-  font-size: 1rem;
+  font-size: 0.875rem;
   margin-top: 1rem; }
 
 /* View mode teaser styles. */
@@ -6879,7 +6879,7 @@ label[for="edit-i-agree-the-information-contained-is-true-accurate-and-complete-
 
 .node--view-mode-teaser .node__content {
   clear: none;
-  font-size: 1rem;
+  font-size: 0.875rem;
   line-height: 1.5; }
 
 /* Node metadata styles. */
@@ -6902,7 +6902,7 @@ label[for="edit-i-agree-the-information-contained-is-true-accurate-and-complete-
 .node__links {
   text-align: right;
   /* LTR */
-  font-size: 1rem; }
+  font-size: 0.875rem; }
 
 [dir="rtl"] .node__links {
   text-align: left; }
@@ -7080,8 +7080,20 @@ label[for="edit-i-agree-the-information-contained-is-true-accurate-and-complete-
 .block-simple-blockready-to-start-franchise {
   margin: 0 auto; }
 
+.block-simple-blockwhy-pakmail-franchise ul {
+  display: flex;
+  flex-wrap: wrap; }
+  .block-simple-blockwhy-pakmail-franchise ul li {
+    list-style: none;
+    width: 33%;
+    padding: 0 60px;
+    text-align: center; }
+  .block-simple-blockwhy-pakmail-franchise ul h3 {
+    line-height: 1.5rem;
+    margin: 1.5rem 0 1rem; }
+
 .block-simple-blockready-to-learn-more {
-  background-color: #976c73; }
+  background-color: #f8e5e8; }
 
 #block-atpakmailyoureinbusinessforyourselfbutnotbyyourself {
   margin-bottom: 0;
@@ -7267,7 +7279,7 @@ input[type="search"] {
   padding: 1rem 1rem;
   margin: 0 0 1rem; }
   .sidebar .block .content {
-    font-size: 1rem;
+    font-size: 0.875rem;
     line-height: 1.5; }
 
 .sidebar h2 {
@@ -7351,7 +7363,7 @@ input[type="search"] {
   transform: translateX(-50%);
   z-index: 50;
   background: #495057;
-  font-size: 1rem;
+  font-size: 0.875rem;
   line-height: 1.5;
   padding: 1px 1rem 2px;
   border-radius: 0 0 0.3rem 0.3rem;
@@ -7461,7 +7473,7 @@ nav.tabs {
 .ui-dialog input,
 .ui-dialog select,
 .ui-dialog textarea {
-  font-size: 1rem; }
+  font-size: 0.875rem; }
 
 .ui-dialog .button {
   background-color: #fff;
@@ -7473,7 +7485,7 @@ nav.tabs {
   border-right-color: #d2d2d2;
   color: #3a3a3a;
   cursor: pointer;
-  font-size: 1rem;
+  font-size: 0.875rem;
   font-weight: normal;
   text-align: center;
   padding: 0.250em 1.063em;
@@ -8143,6 +8155,9 @@ h3 {
 
 h3 {
   margin: 2rem 0; }
+
+p {
+  font-size: 0.875rem; }
 
 a:hover {
   text-decoration: none;
