--- a/web/themes/custom/local/scss/typography.scss
+++ b/web/themes/custom/local/scss/typography.scss
@@ -39,7 +39,7 @@ $font-family-local: "Open Sans",Verdana,Tahoma,"DejaVu Sans",sans-serif;
 $font-family-local-h: "Libre Franklin",Helvetica,Arial,"DejaVu Sans",sans-serif;
 $font-family-local-input: Verdana,Arial,sans-serif;
 $font-family-base: $font-family-local;
-$font-size-base: 87.5%; // Assumes the browser default, typically `16px`
+$font-size-base: .875rem; // Assumes the browser default, typically `16px`
 $font-size-lg: 1.25rem;
 $font-size-sm: .875rem;
 $font-size-xs: .75rem;
