--- a/web/themes/custom/local/scss/components/page.scss
+++ b/web/themes/custom/local/scss/components/page.scss
@@ -52,6 +52,26 @@
     }
 }
 
+.path-frontpage {
+    .node--view-mode-full .node__content {
+        margin: 0 auto;
+        max-width: 600px;
+        padding-top: 50px;
+        padding-bottom: 25px;
+        text-align: center;
+    }
+    .featured-bottom .container {
+        padding-top: 0;
+    }
+    .region-featured-bottom-first {
+        padding-bottom: 0;
+
+        > div {
+            padding: 0;
+        }
+    }
+}
+
 .region-featured-bottom-first {
     justify-content: space-between;
 
@@ -149,9 +169,13 @@
 
     li {
         list-style: none;
-        width: 33%;
         padding: 0 60px;
         text-align: center;
+        width: 100%;
+
+        @media screen and (min-width: 992px) {
+            width: 33%;
+        }
     }
 
     h3 {
